8326990: [lworld] make value classes a preview feature
Co-authored-by: Frederic Parain <fparain@openjdk.org>